--- a/index.html
+++ b/index.html
@@ -209,8 +209,200 @@
           </a>
         </div>
       </div>
-      <!-- Diğer projeler de aynı yapıyla buraya eklenmeli -->
     </div>
+
+    <div class="project-item">
+      <h3>Bottle Runner Gun</h3>
+      <iframe width="100%" height="225" src="https://youtube.com/embed/NyJEd7xxyP4?feature=share" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.BottleRunnerGun">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/us/app/bottle-runner-gun/id6453169545">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>My Tasty Empire</h3>
+      <iframe src="https://www.youtube.com/embed/xwZl2fbaeZI" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MyTastyEmpire&hl=en">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/us/app/my-tasty-empire/id6502766369">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>My Snack Empire</h3>
+      <iframe src="https://youtube.com/embed/Z5BVKtJWGOA?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MySnackEmpire&hl=tr">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/us/app/my-snack-empire/id6736908202">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>My Berry Farm</h3>
+      <iframe src="https://youtube.com/embed/KsdSxgSVejQ?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.MyBerryFarm">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/ec/app/my-berry-farm/id6636528155?l=en-GB">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Forkdrift Master</h3>
+      <iframe src="https://youtube.com/embed/cRZ4XDmf2RQ?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/us/app/forkdrift-master/id1638728632">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Wheel Up Clicker</h3>
+      <iframe src="https://youtube.com/embed/Gu-XTNs5ZvI?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/us/app/wheel-up-clicker/id1659596791">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+
+    <div class="project-item">
+      <h3>Try Higher</h3>
+      <iframe src="https://youtube.com/embed/VgujLQnEcbY?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/us/app/try-higher/id1626437505">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Crowd Busters</h3>
+      <iframe src="https://youtube.com/embed/zYS3Kfp4cl8?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.CrowdBusters">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/ec/app/crowd-busters/id6459474589?l=en-GB">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Poly Smash Ball</h3>
+      <iframe src="https://youtube.com/embed/QqQ3u8zOjC4?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/us/app/poly-smash-ball/id6443899879">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Voxel Crusher Run</h3>
+      <iframe src="https://youtube.com/embed/CJcBnCtnMcE?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://play.google.com/store/apps/details?id=com.BoomCodes.VoxelCrusherRun">
+          <img src="android-icon.png" alt="Android">
+        </a>
+        <a href="https://apps.apple.com/us/app/voxel-crusher-run/id6447962131">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Coin Surfer</h3>
+      <iframe src="https://youtube.com/embed/qQKNu_yu7FY?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/us/app/coin-surfer/id6444552017">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Saw Car</h3>
+      <iframe src="https://youtube.com/embed/cAtLTuNi4dc?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/us/app/saw-car/id1667867473">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Join the Team</h3>
+      <iframe src="https://youtube.com/embed/Un-EgWZGRm8?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/tr/app/join-the-team/id1613534259?l=tr">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Money Fishing</h3>
+      <iframe src="https://youtube.com/embed/61m_RzHVkkQ?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/us/app/money-fishing/id1633604042">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Furniture Factory</h3>
+      <iframe src="https://youtube.com/embed/5bPQn_cYca0?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/us/app/furniture-factory/id1630323596">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Throw'n Spin</h3>
+      <iframe src="https://youtube.com/embed/TF_Ip3898Bs?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/us/app/thrown-spin/id6443603710">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    <div class="project-item">
+      <h3>Pull The Treasure</h3>
+      <iframe src="https://youtube.com/embed/b8cX95yUl7w?feature=share" allowfullscreen></iframe>
+      <div class="project-links">
+        <a href="https://apps.apple.com/us/app/pull-the-treasure/id6446171012">
+          <img src="ios-icon.png" alt="iOS">
+        </a>
+      </div>
+    </div>
+
+    
   </section>
 
   <div class="social-icons">
