DevOps:Settings update in project

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 
   <section class="about">
     <h2>About Me</h2>
-    <p>Hi there, I'm Muhammet Mustafa HASTAOĞLUGİL! 👋</p>
-    <p>I'm a passionate <strong>Computer Engineer</strong> with experience in game and mobile app development.</p>
+    <p>👋 Hello! I’m Muhammet Mustafa HASTAOĞLUĞİL!/p>
+    <p>A dedicated  <strong>Computer Engineer</strong> with hands-on experience in <strong> mobile app </strong> <strong> game development</strong>. I enjoy building creative, user-focused digital solutions using modern technologies.</p>
 
     <h3>🛠 Skills & Technologies</h3>
     <ul>
