--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <section class="about">
     <h2>About Me</h2>
     <p>👋 Hello! I’m Muhammet Mustafa HASTAOĞLUĞİL!/p>
-    <p>A dedicated  <strong>Computer Engineer</strong> with hands-on experience in <strong> mobile app </strong> <strong> game development</strong>. I enjoy building creative, user-focused digital solutions using modern technologies.</p>
+    <p>A dedicated  <strong>Computer Engineer</strong> with hands-on experience in <strong> mobile app </strong> <strong> and game development</strong>. I enjoy building creative, user-focused digital solutions using modern technologies.</p>
 
     <h3>🛠 Skills & Technologies</h3>
     <ul>
