DevOps:Site update in project

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <canvas id="bg"></canvas>
 
   <header>
-    <h1>Muhammet Mustafa HASTAOĞLUGİL Portfolio</h1>
+    <h1>Muhammet Mustafa HASTAOĞLUGİL – Personal Portfolio</h1>
   </header>
 
   <section class="about">
